feat: 📝 Quarkus file memory